# cadres_utils

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
cadres_utils/: alphasortkey.py  date_utils.py  field_utils.py  file_utils.py  language_ua_utils.py  list_utils.py
cadres_utils/api/: default_request.py  exception.py  requests.py  wapi_invoker.py
cadres_utils/common_data/: config.py
cadres_utils/doc/: doc_utils.py
cadres_utils/excel/: excel_data_source.py  excel_utils.py  reader.py
cadres_utils/file/: utils.py
cadres_utils/logger/: initializer.py
tests/: test_language_ua_utils.py  test_list_utils.py
