[project]
name = "cadres-utils-package"
version = "0.1.0"
description = "utility functions for cadres"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "cryptography>=46.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "setuptools>=78.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "aioresponses>=0.7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
